[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
openapi = { path = "../openapi" }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3.31"
log = "0.4"
futures = "0.3"
env_logger = "0.11.8"
